Решение проблемы с картинками

--- a/src/works.html
+++ b/src/works.html
@@ -10,7 +10,7 @@ title: Works
     <div class="work-preview">
         <picture>
             <source srcset="https://placehold.it/575x150" media="(max-width: 575px)">
-            <img src="assets/images/Work1.jpg" alt="">
+            <img src="assets/images/work1.jpg" alt="">
         </picture>
     </div>
     <div class="work-content">
@@ -36,7 +36,7 @@ title: Works
     <div class="work-preview">
         <picture>
             <source srcset="https://placehold.it/575x150" media="(max-width: 575px)">
-            <img src="assets/images/Work2.jpg" alt="">
+            <img src="assets/images/work2.jpg" alt="">
         </picture>
     </div>
     <div class="work-content">
