add new logos,images and rename header, add signin,signup pages,create share-modal

--- a/src/profile.html
+++ b/src/profile.html
@@ -4,13 +4,13 @@ title: Profile
 ---
 
 
-<h1 class="page-title">Профиль</h1>
+<h1 class="page-title">Профіль</h1>
 
 <form class="form" action="/" method="POST">
     <div class="cabinet">
         <div class="cabinet-form">
             <div class="form-group">
-                <input class="form-control" type="text" placeholder="Ваше имя" value="Сагура Юрий">
+                <input class="form-control" type="text" placeholder="Ваше ім'я" value="Сагура Юрій">
                 <span class="form-line"></span>
             </div>
             <div class="form-group">
@@ -22,7 +22,7 @@ title: Profile
                 <span class="form-line"></span>
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" placeholder="Подтвердите пароль" value="">
+                <input class="form-control" type="password" placeholder="Підтвердіть пароль" value="">
                 <span class="form-line"></span>
             </div>
         </div>
@@ -32,11 +32,11 @@ title: Profile
 
             <label class="cabinet-file">
                 <input type="file">
-                выбрать аватар
+                виберіть аватар
             </label>
         </div>
     </div>
 
-    <button class="btn btn--blue btn--rounded btn--sm">Сохранить</button>
+    <button class="btn btn--blue btn--rounded btn--sm">Зберегти</button>
     
 </form>
