--- a/src/reset.html
+++ b/src/reset.html
@@ -4,7 +4,7 @@ title: Reset
 ---
 
 
-<h1 class="page-title page-title--center">Восстановить</h1>
+<h1 class="page-title page-title--center">Відновити</h1>
 
 <form class="form form--auth" action="/" method="POST">
 
@@ -14,13 +14,13 @@ title: Reset
     </div>
 
     <div class="form-footer form-footer--center">
-        <button class="btn btn--blue btn--rounded btn--sm">Войти</button>
+        <button class="btn btn--blue btn--rounded btn--sm">Увійти</button>
         <ul class="form-footer-list">
             <li>
-                <a href="signin.html">вход</a>
+                <a href="signin.html">вхід</a>
             </li>
             <li>
-                <a href="signup.html">регистрация</a>
+                <a href="signup.html">реєстарція</a>
             </li>
         </ul>
     </div>
