--- a/src/signin.html
+++ b/src/signin.html
@@ -4,7 +4,7 @@ title: Signin
 ---
 
 
-<h1 class="page-title page-title--center">Вход</h1>
+<h1 class="page-title page-title--center">Вхід</h1>
 
 <form class="form form--auth" action="/" method="POST">
 
@@ -14,18 +14,18 @@ title: Signin
     </div>
 
     <div class="form-group">
-        <input class="form-control" type="password" placeholder="Введите пароль">
+        <input class="form-control" type="password" placeholder="Введіть пароль">
         <span class="form-line"></span>
     </div>
 
     <div class="form-footer form-footer--center">
-        <button class="btn btn--blue btn--rounded btn--sm">Войти</button>
+        <button class="btn btn--blue btn--rounded btn--sm">Увійти</button>
         <ul class="form-footer-list">
             <li>
-                <a href="signup.html">регистрация</a>
+                <a href="signup.html">реєстрація</a>
             </li>
             <li>
-                <a href="reset.html">восстановить</a>
+                <a href="reset.html">відновити</a>
             </li>
         </ul>
     </div>
