--- a/src/works.html
+++ b/src/works.html
@@ -4,7 +4,7 @@ title: Works
 ---
 
 
-<h1 class="page-title">Мои работы</h1>
+<h1 class="page-title">Мої роботи</h1>
 
 <article class="work">
     <div class="work-preview">
@@ -15,18 +15,21 @@ title: Works
     </div>
     <div class="work-content">
         <h2 class="work-title">
-            <a href="#" target="_blank">altermono.com</a>
+            <a href="https://zaezyura.github.io/mogo/" target="_blank">MoGo</a>
         </h2>
         <div class="work-description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi deserunt, quam recusandae aspernatur libero ullam debitis minima ut officiis eos neque! Facere sequi fugit fugiat! Sit cupiditate hic illum molestias?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur maiores aliquam, inventore unde repudiandae sunt aliquid perferendis fugiat architecto, quibusdam impedit aspernatur quaerat nisi itaque. Quia tenetur sequi molestiae cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing a
+            </p>
         </div>
         <ul class="tags">
             <li class="tags-item">дизайн</li>
-            <li class="tags-item">создание сайта</li>
-            <li class="tags-item">SMM</li>
+            <li class="tags-item">створення сайту</li>
+            <li class="tags-item">jQuery</li>
+            <li class="tags-item">Responsive Web Design</li>
+            <li class="tags-item">Landing page</li>
         </ul>
         <div class="work-btn">
-            <a class="btn btn--blue btn--rounded btn--sm" href="#" target="_blank">Перейти на сайт</a>
+            <a class="btn btn--blue btn--rounded btn--sm" href="https://zaezyura.github.io/mogo/" target="_blank">Перейти на сайт</a>
         </div>
     </div>
 </article> <!--/.work -->
@@ -41,21 +44,21 @@ title: Works
     </div>
     <div class="work-content">
         <h2 class="work-title">
-            <a href="#" target="_blank">codedoco.com</a>
+            <a href="index.html" target="_blank">Personal-blog</a>
         </h2>
         <div class="work-description">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi deserunt, quam </p>
         </div>
         <ul class="tags">
             <li class="tags-item">дизайн</li>
-            <li class="tags-item">создание сайта</li>
-            <li class="tags-item">SMM</li>
-            <li class="tags-item">создание сайта</li>
-            <li class="tags-item">SMM</li>
-            <li class="tags-item">дизайн</li>
+            <li class="tags-item">створення сайту</li>
+            <li class="tags-item">HTML5</li>
+            <li class="tags-item">CSS3</li>
+            <li class="tags-item">SASS</li>
+            <li class="tags-item">GULP</li>
         </ul>
         <div class="work-btn">
-            <a class="btn btn--blue btn--rounded btn--sm" href="#" target="_blank">Перейти на сайт</a>
+            <a class="btn btn--blue btn--rounded btn--sm" href="index.html" target="_blank">Перейти на сайт</a>
         </div>
     </div>
 </article> <!--/.work -->
