--- a/src/signup.html
+++ b/src/signup.html
@@ -4,11 +4,11 @@ title: Signup
 ---
 
 
-<h1 class="page-title page-title--center">Регистрация</h1>
+<h1 class="page-title page-title--center">Реєстрація</h1>
 
 <form class="form form--auth" action="/" method="POST">
     <div class="form-group">
-        <input class="form-control" type="text" placeholder="Ваше имя">
+        <input class="form-control" type="text" placeholder="Ваше ім'я">
         <span class="form-line"></span>
     </div>
 
@@ -18,23 +18,23 @@ title: Signup
     </div>
 
     <div class="form-group">
-        <input class="form-control" type="password" placeholder="Введите пароль">
+        <input class="form-control" type="password" placeholder="Введіть пароль">
         <span class="form-line"></span>
     </div>
 
     <div class="form-group">
-        <input class="form-control" type="password" placeholder="Подтвердите пароль">
+        <input class="form-control" type="password" placeholder="Підтвердіть пароль">
         <span class="form-line"></span>
     </div>
 
     <div class="form-footer form-footer--center">
-        <button class="btn btn--blue btn--rounded btn--sm">Регистрация</button>
+        <button class="btn btn--blue btn--rounded btn--sm">Реєстрація</button>
         <ul class="form-footer-list">
             <li>
-                <a href="signin.html">войти</a>
+                <a href="signin.html">увійти</a>
             </li>
             <li>
-                <a href="reset.html">восстановить</a>
+                <a href="reset.html">відновити</a>
             </li>
         </ul>
     </div>
