--- a/src/works.html
+++ b/src/works.html
@@ -9,7 +9,7 @@ title: Works
 <article class="work">
     <div class="work-preview">
         <picture>
-            <source srcset="https://placehold.it/575x150" media="(max-width: 575px)">
+            <source srcset="assets/images/work1mb.jpg" media="(max-width: 575px)">
             <img src="assets/images/work1.jpg" alt="">
         </picture>
     </div>
@@ -18,7 +18,7 @@ title: Works
             <a href="https://zaezyura.github.io/mogo/" target="_blank">MoGo</a>
         </h2>
         <div class="work-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur maiores aliquam, inventore unde repudiandae sunt aliquid perferendis fugiat architecto, quibusdam impedit aspernatur quaerat nisi itaque. Quia tenetur sequi molestiae cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing a
+            <p>Адаптивна верстка Landing page з використанням бібліотеки jQuery.
             </p>
         </div>
         <ul class="tags">
@@ -38,7 +38,7 @@ title: Works
 <article class="work">
     <div class="work-preview">
         <picture>
-            <source srcset="https://placehold.it/575x150" media="(max-width: 575px)">
+            <source srcset="assets/images/work2mb.jpg" media="(max-width: 575px)">
             <img src="assets/images/work2.jpg" alt="">
         </picture>
     </div>
@@ -47,7 +47,7 @@ title: Works
             <a href="index.html" target="_blank">Personal-blog</a>
         </h2>
         <div class="work-description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi deserunt, quam </p>
+            <p>Адаптивна верстка багатосторінкового сайту з використанням збирача Gulp і препроцесcора SASS.</p>
         </div>
         <ul class="tags">
             <li class="tags-item">дизайн</li>
